nav menu spacing fix

--- a/app/assets/stylesheets/base/main.css.scss
+++ b/app/assets/stylesheets/base/main.css.scss
@@ -1284,13 +1284,13 @@ ol.mp_list {
 
 .nav-container {
   .title .nav-menu {
-    margin: 10px 0 0 -8px;
+    margin: 0 0 0 -8px;
   }
 
   .nav-menu {
     display: inline-block;
     margin: 0;
-    line-height: 1.4em;
+    line-height: 2em;
     overflow: hidden;
     padding: 3px 0;
     max-width: 65%;
